--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -4,13 +4,14 @@
 --orange: #FAB637;
 --red: #FF4848;
 --brown:#CC6119;
---grey: #CC6119;
+--grey: #ECEFF3;
+--darkGrey:#444;
 --black: #232628;
 --blue: #6C98E1;
 }
 
 *{
-    font-family: 'open-sans';
+    font-family: 'open-sans'; /*Police de corps*/
     box-sizing: border-box;
     margin: 0;
 }
@@ -20,41 +21,75 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    height: 80px;
+    height: 90px;
     background-color: var(--black);
     color:var(--white);
     font-weight: bold;
 }
 
+.headerCtr h1{
+    align-self: center;
+    font-weight: bold;
+    font-size: 1.9em;
+}
+
 .texteOrange{
-    color: var(--brown) !important;
+    color: var(--brown) !important; /*Colore les éléments en marron clair*/
+}
+
+.headerFontSize{
     font-size: .8em;
 }
 
-#headerCtr{
+.headerCtr{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    height: 70px;
+}
+
+.headerLogo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     height: 60px;
 }
 
-#headerAdresse, #headerTel, #horaireEtOuvertureCtr{
+.headerLogo img{
+    width: 35px;
+    height: 35px;
+}
+
+.headerAdresse, .headerTel, .horaireEtOuvertureCtr{
+    padding-top: 20px;
     height: 60px;
     display: flex;
     flex-direction: column;
 }
 
-#headerAdresse{
-    justify-content: center;
+.headerAdresse{
+    justify-content: baseline;
 }
 
-#headerTel{
-    justify-content: center;
+.headerAdresse adress{
+    color: #AAA;
+    text-transform: uppercase;
+    font-family: 'montserrat' !important; /*Police de titre*/
+    font-size: 0.75em;
+    width: 80%;    
 }
 
-#horaireEtOuvertureCtr{
-    justify-content: space-evenly;
-    padding: 1% 0;
+.headerTel{
+    justify-content: baseline;
+}
+
+.headerTel p{
+    font-family: 'montserrat' !important; /*Police de titre*/
+    font-size: 1.1em;
+}
+
+.horaireEtOuvertureCtr{
+    justify-content: baseline;
 }
 
 .horaireCtr{
@@ -64,27 +99,133 @@ header{
 }
 
 .horaireCtr p{
+    font-family: 'montserrat' !important; /*Police de titre*/
+    font-size: 0.85em;
     padding-left: 10px;
+}
+
+.socialMediaCtr{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fa-brands{
+    border: 1px solid transparent;
+    border-radius: 50%;
+    background-color: var(--darkGrey);
+}
+
+.fa-twitter{
+    padding: 5px;
+}
+
+.fa-facebook-f{
+    padding:  5px 9px; 
 }
 
 
 h1, h2, h1 span{
     text-transform: uppercase;
-    font-family: 'montserrat' !important;
+    font-family: 'montserrat' !important; /*Police de titre*/
 }
 
-nav{ /*cache la barre de navigation pour la vue mobile*/
-    display: none; 
+nav{ 
+    /*display: none;*/  /*cache la barre de navigation pour la vue mobile*/
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    background-color:var(--grey) ;
 }
 
-
-/*header, #banniereDesktop{
-    display: none;
+nav ul{    
+    width: 100%;
+    padding: 0;
+    margin-right: 12%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
 }
 
-#hTel{
-    display: inline-block !important;
-}*/
+nav li{
+    width: 7em;
+    height: 50px;
+    list-style-type: none;
+
+}
+
+nav a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    color: var(--black);
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 0.85em;
+}
+
+nav a:hover{
+    background-color: var(--brown);
+    color: var(--white);
+}
+
+#banniereDesktop{
+    position: relative;
+    height: 800px;
+}
+
+#banniereDesktop img{
+    object-fit: cover;
+    width: 100%;
+    height: 800px;
+}
+
+.sectionTitle{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--black);
+    color: var(--white);
+    position: absolute;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    font-weight: bold;
+    font-size: 1.3em;
+}
+
+.articleMain{
+    display: flex;
+    margin: 25px 0;
+}
+
+.articleMain img{
+    width: 90%;
+}
+
+.articleMain div{
+    width: 100%;
+}
+
+.articleText{
+    width: 90%;
+}
+
+.articleMainCtr{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #444;
+}
 
 img{
     width: 100%;
