--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -27,7 +27,7 @@ header{
     font-weight: bold;
 }
 
-.headerCtr h1{
+.headerCtr h1{ /*style du titre CLUB AUTO*/
     align-self: center;
     font-weight: bold;
     font-size: 1.9em;
@@ -37,41 +37,41 @@ header{
     color: var(--brown) !important; /*Colore les éléments en marron clair*/
 }
 
-.headerFontSize{
+.headerFontSize{/*font size des titres en orange seulement sur le header*/
     font-size: .8em;
 }
 
-.headerCtr{
+.headerCtr{/* container des infos du header, allant du titre au social media buutons*/
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     height: 70px;
 }
 
-.headerLogo{
+.headerLogo{/* Div permettant d'agencer le texte et le logo pour l'adresse et le téléphone dans le header*/
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 60px;
 }
 
-.headerLogo img{
+.headerLogo img{/*défini la taille des icones adresse et tél*/
     width: 35px;
     height: 35px;
 }
 
-.headerAdresse, .headerTel, .horaireEtOuvertureCtr{
+.headerAdresse, .headerTel, .horaireEtOuvertureCtr{/*mise en forme commune aux infos du header*/
     padding-top: 20px;
     height: 60px;
     display: flex;
     flex-direction: column;
 }
 
-.headerAdresse{
+.headerAdresse, .headerTel, .horaireEtOuvertureCtr{ /*Permet d'égaliser la hauteur entre les infos du header*/
     justify-content: baseline;
 }
 
-.headerAdresse adress{
+.headerAdresse adress{/*Mise en forme du texte de l'adresse*/
     color: #AAA;
     text-transform: uppercase;
     font-family: 'montserrat' !important; /*Police de titre*/
@@ -79,17 +79,9 @@ header{
     width: 80%;    
 }
 
-.headerTel{
-    justify-content: baseline;
-}
-
 .headerTel p{
     font-family: 'montserrat' !important; /*Police de titre*/
     font-size: 1.1em;
-}
-
-.horaireEtOuvertureCtr{
-    justify-content: baseline;
 }
 
 .horaireCtr{
@@ -201,36 +193,90 @@ nav a:hover{
     font-size: 1.3em;
 }
 
-.articleMain{
-    display: flex;
-    margin: 25px 0;
-}
-
-.articleMain img{
-    width: 90%;
-}
-
-.articleMain div{
-    width: 100%;
-}
-
-.articleText{
-    width: 90%;
-}
-
 .articleMainCtr{
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #444;
+}
+
+.articleMain{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+
+.articleImg, .articleText{
+    width: 48%;
+}
+
+.articleText h2{
+    font-size: 0.85em;
+}
+
+.articleText p, .articleText li{
+    color: var(--darkGrey);
+    font-size: 1.05em;
+}
+
+.breakArticle{
+    line-height: 60px;
+}
+
+.articleText li{
+    margin-top: 10px;
+}
+
+.frameCtrBg{
+    background-image: url('../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule1.jpg');
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.frameCtr{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    height: 500px;
+}
+
+.achatFrame{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: baseline;
+    padding: 15px 30px;
+    width: 450px;
+    height: 170px;
+}
+
+.achatFrame h2{
+    font-size: 1.2em;
+    text-transform: capitalize !important;
+    font-family: 'montserrat' !important;
+}
+
+.achatFrame p{
+    font-size: 0.8em;
+    color: var(--white)
+}
+
+.bgLoca{
+    background-color: var(--orange);
+}
+
+.bgBuy{
+    background-color: var(--red);
 }
 
 img{
-    width: 100%;
+    width: 100%; /*défini une taille d'image de base*/
 }
 
+/*classes de responsivité*/
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
