--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -5,7 +5,7 @@
 --red: #FF4848;
 --brown:#CC6119;
 --grey: #ECEFF3;
---darkGrey:#444;
+--darkGrey:#333;
 --black: #232628;
 --blue: #6C98E1;
 }
@@ -222,6 +222,7 @@ nav a:hover{
 
 .breakArticle{
     line-height: 60px;
+    border: 1px solid var(--black);
 }
 
 .articleText li{
@@ -230,6 +231,8 @@ nav a:hover{
 
 .frameCtrBg{
     background-image: url('../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -240,7 +243,7 @@ nav a:hover{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    height: 500px;
+    height: 600px;
 }
 
 .achatFrame{
@@ -248,28 +251,96 @@ nav a:hover{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: baseline;
-    padding: 15px 30px;
+    padding: 20px 35px;
     width: 450px;
-    height: 170px;
+    height: 200px;
 }
 
 .achatFrame h2{
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-transform: capitalize !important;
     font-family: 'montserrat' !important;
 }
 
 .achatFrame p{
-    font-size: 0.8em;
-    color: var(--white)
+    font-size: 1em;
+    color: var(--white);
 }
 
 .bgLoca{
     background-color: var(--orange);
+    opacity: 0.85;
 }
 
 .bgBuy{
     background-color: var(--red);
+    opacity: 0.85;
+}
+
+.vehiculeRecentCtr{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 550px;
+    background-color:  var(--black);
+}
+
+.vehiculeRecentTitle{
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    color:  var(--white);
+    font-size: 1.8em;
+    border-bottom: solid 3px var(--brown);
+}
+
+.vehiculeRecentCtr ul{
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.vehiculeRecentCtr a{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 350px;
+    height: 350px;
+    text-decoration: none;
+}
+
+.vehiculeRecentCtr a div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--darkGrey);
+    height: 80px;
+}
+
+.vehiculeRecentCtr a div h1{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    font-size: 1.2em;
+    color: var(--white);
+}
+
+.vehiculeRecentCtr a div h2{    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--white);
+    font-size: 0.9em;
+    background-color: var(--blue);
+    height: 40px;
+    width: 85px;
+}
+
+.vehiculeRecentCtr a div h2 span{
+    color: var(--black);
+    text-decoration: line-through;
 }
 
 img{
