--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -16,6 +16,11 @@
     margin: 0;
 }
 
+h1, h2, h1 span{/*définit la police et la capitalisation des titres*/
+    text-transform: uppercase;
+    font-family: 'montserrat' !important; /*Police de titre*/
+}
+
 header{
     display: flex;
     flex-direction: row;
@@ -55,7 +60,7 @@ header{
     height: 60px;
 }
 
-.headerLogo img{/*défini la taille des icones adresse et tél*/
+.headerLogo img{/*définit la taille des icones adresse et tél*/
     width: 35px;
     height: 35px;
 }
@@ -84,54 +89,52 @@ header{
     font-size: 1.1em;
 }
 
-.horaireCtr{
+.horaireCtr{ /*Contient et permet l'alignement des jours d'ouvertures*/
     display: flex;
     flex-direction: row;
     align-items: baseline;
 }
 
-.horaireCtr p{
+.horaireCtr p{ /*Police des jours d'ouverture*/
     font-family: 'montserrat' !important; /*Police de titre*/
     font-size: 0.85em;
     padding-left: 10px;
 }
 
-.socialMediaCtr{
+.socialMediaCtr{/*Aligne les bouton social media*/
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
 
-.fa-brands{
+.headerSocial{/*Style des deux boutons social media*/
     border: 1px solid transparent;
     border-radius: 50%;
     background-color: var(--darkGrey);
 }
 
-.fa-twitter{
+.fa-twitter{/*style twitter bouton*/
     padding: 5px;
 }
 
-.fa-facebook-f{
+.fa-facebook-f{/*style facebook bouton*/
     padding:  5px 9px; 
 }
 
-
-h1, h2, h1 span{
-    text-transform: uppercase;
-    font-family: 'montserrat' !important; /*Police de titre*/
-}
-
-nav{ 
+nav{
     /*display: none;*/  /*cache la barre de navigation pour la vue mobile*/
     width: 100%;
+    position: absolute;
     display: flex;
     justify-content: end;
     background-color:var(--grey) ;
+    opacity: 0.9;
+    top: 90px;
+    z-index: 500;
 }
 
-nav ul{    
+nav ul{ 
     width: 100%;
     padding: 0;
     margin-right: 12%;
@@ -140,14 +143,13 @@ nav ul{
     justify-content: end;
 }
 
-nav li{
+nav li{ /*Définit la dimensions des liens barres nav*/
     width: 7em;
     height: 50px;
     list-style-type: none;
-
 }
 
-nav a{
+nav a{ /*Définit le style et l'alignement des liens de la barre de navigation*/
     width: 100%;
     height: 100%;
     display: flex;
@@ -162,23 +164,23 @@ nav a{
     font-size: 0.85em;
 }
 
-nav a:hover{
+nav a:hover{/*Hover des links*/
     background-color: var(--brown);
     color: var(--white);
 }
 
-#banniereDesktop{
+#banniereDesktop{/*Dimensions de la bannière photgraphique*/
     position: relative;
     height: 800px;
 }
 
-#banniereDesktop img{
+#banniereDesktop img{/*Dimensions de la bannière photgraphique*/
     object-fit: cover;
     width: 100%;
     height: 800px;
 }
 
-.sectionTitle{
+.sectionTitle{/*Style du titre au dessous de la bannière photo*/
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -193,7 +195,7 @@ nav a:hover{
     font-size: 1.3em;
 }
 
-.articleMainCtr{
+.articleMainCtr{/*style de l'ensemble de l'article*/
     height: auto;
     display: flex;
     flex-direction: column;
@@ -207,8 +209,8 @@ nav a:hover{
     margin: 30px 0;
 }
 
-.articleImg, .articleText{
-    width: 48%;
+.articleImg, .articleText{ /*Taille du texte et de  la photo sur la même ligne*/
+    width: 48%; /*taille réglée pour laisser un gap*/
 }
 
 .articleText h2{
@@ -220,7 +222,7 @@ nav a:hover{
     font-size: 1.05em;
 }
 
-.breakArticle{
+.breakArticle{ /*définit une hauteur entre le titre et le texte*/
     line-height: 60px;
     border: 1px solid var(--black);
 }
@@ -229,7 +231,7 @@ nav a:hover{
     margin-top: 10px;
 }
 
-.frameCtrBg{
+.frameCtrBg{/*Div contenant le background et l'agencement des deux div bouton d'achat et loca*/
     background-image: url('../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -251,14 +253,14 @@ nav a:hover{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: baseline;
-    padding: 20px 35px;
+    padding: 35px 35px;
     width: 450px;
-    height: 200px;
+    height: 230px;
 }
 
 .achatFrame h2{
     font-size: 1.3em;
-    text-transform: capitalize !important;
+    text-transform: full-size-kana !important;
     font-family: 'montserrat' !important;
 }
 
@@ -267,12 +269,12 @@ nav a:hover{
     color: var(--white);
 }
 
-.bgLoca{
+.bgJaune{
     background-color: var(--orange);
     opacity: 0.85;
 }
 
-.bgBuy{
+.bgRouge{
     background-color: var(--red);
     opacity: 0.85;
 }
@@ -322,8 +324,12 @@ nav a:hover{
     display: flex;
     align-items: center;
     width: 50%;
-    font-size: 1.2em;
     color: var(--white);
+}
+
+.vehiculeRecentCtr strong{
+    font-family: 'Montserrat' !important;
+    font-size: 0.65em;
 }
 
 .vehiculeRecentCtr a div h2{    
@@ -343,8 +349,215 @@ nav a:hover{
     text-decoration: line-through;
 }
 
+.nosQualiteCtr{/*contenaire de la section des qualités*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 500px;
+    width: 100%;
+}
+
+.nosQualiteCtr img{/*taille du logo*/
+    width: 60px;
+    height: 60px;
+}
+
+.lesQuatresQualitesCtr{/*div pour aligner et répartir les quatres qualités*/
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.qualiteUnique{/*contenaire du logo+texte*/
+    width: 350px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.qualiteUnique div{ /*dimensionne le bloc de texte pour le séparer du logo*/
+    width: 70%;
+}
+
+.qualiteUnique h2{/*Style du titre de la qualité*/
+    font-size: 1.2em;
+    margin-bottom: 15px;
+}
+
+.nosQualiteCtr button{/*Style du bouton contactez-nous*/
+    width: 200px;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    background-color: var(--blue);
+    padding: 10px;
+    color: var(--white);
+    font-weight: bold;
+    font-family: 'Montserrat';
+}
+
+.banniereVenteEtLocaCtr{/*contenaire de la banière avec un bg image*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../../Ressources/Club Auto - Charte graphique&Images/Club Auto - Images/images/vehicule3.jpg');
+}
+
+.banniereVenteEtLocaCtr > div{/*positionne la div et définit une largeur diféérente de la classe utilisée précédemment*/
+    width: 500px !important;
+    margin-left: 20%;
+}
+
+.banniereVenteEtLocaCtr h1{/*taille du titre en noir*/
+    font-size: 1.8em;
+}
+
+.banniereVenteEtLocaCtr h2{/*taille du titre en blanc*/
+    color: var(--white);
+    text-transform: uppercase !important;
+    font-size: 1.8em;
+}
+
+.banniereVenteEtLocaCtr p{
+    color: var(--black);
+    font-size: 1.1em;
+}
+
+footer{
+    height: 300px;
+    background-color: var(--black);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: var(--white);
+}
+
+footer > div{/*englobe toutes les infos du dooter et les aligne en row*/
+    display: flex;
+    justify-content: space-around;
+}
+
+footer > div > div{/*div de chaque info*/
+    width: 20%;
+}
+
+.footerInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    width: 330px;
+    height: 150px;
+}
+
+.footerInfo h1{
+    padding-bottom: 15px;
+}
+
+.presentation span{
+    color: var(--white);
+}
+
+.presentation h1{
+    font-size: 1.2em;
+    color: var(--blue);
+}
+
+.presentation p{
+    color: #CCC;
+}
+
+.footerHoraire{
+    height: 100px;
+    font-size: 1.2em;
+}
+
+.footerHoraire span{
+    color: #CCC;
+}
+
+.footerHoraire h1{
+    font-size: 0.95em !important;
+}
+
+.newsletter h1{
+    font-size: 1.15em;
+}
+
+.newsletter input{
+    width: 200px;
+    height: 35px;
+    border-radius: 0;
+    border: none;
+    font-size: 1em;
+    padding-left: 10px;
+    color: var(--darkGrey);
+    outline: none
+}
+
+.newsletter button{
+    border: none;
+    background-color: var(--brown);
+    border-radius: 0;
+    width: 35px;
+    height: 35px;
+}
+
+.newsletter > div{
+    display: flex;
+    justify-content: baseline;
+    padding-bottom: 10px;
+}
+
+.newsletter p{
+    color: #CCC;
+    width: 70%;
+}
+
+.footerSocial > h1{
+    font-size: 1.15em;
+}
+
+.footerSocial a{
+    text-decoration: none;
+}
+
+.footerSocial > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    list-style-type: none;
+    height: 50px;
+    padding: 0;
+}
+
+.fa-brands{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 0;
+    height: 40px;
+    width: 40px;
+    font-size: 1.2em;
+    margin-right: 15px;
+    border: 1px solid transparent;
+    background-color: var(--darkGrey);
+}
+
+.copyright{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: solid 2px #666;
+    height: 50px;
+    color: #CCC;
+}
+
 img{
-    width: 100%; /*défini une taille d'image de base*/
+    width: 100%; /*définit une taille d'image de base*/
 }
 
 /*classes de responsivité*/
